[project]
name = "zync"
dynamic = ["version"]
description = 'Write dual sync/async interfaces with minimal duplication.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Benjy Wiener", email = "benjywiener@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["typing_extensions~=4.0"]

[project.optional-dependencies]
dev = ["coverage", "pytest", "pytest-cov"]

[project.urls]
Documentation = "https://github.com/BenjyWiener/zync#readme"
Issues = "https://github.com/BenjyWiener/zync/issues"
Source = "https://github.com/BenjyWiener/zync"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["D", "I"]
ignore = [
    "D105", # undocumented-magic-method
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "error"

pythonVersion = "3.10"
[tool.coverage.run]
source_pkgs = ["zync", "tests"]
branch = true

[tool.coverage.paths]
zync = ["src/zync"]
tests = ["tests"]

[tool.coverage.report]
precision = 2
exclude_lines = ['pragma: no cover']
show_missing = true
