[project]
name = "zyncio"
dynamic = ["version", "readme"]
description = "Write dual sync/async interfaces with minimal duplication."
requires-python = ">=3.10"
license = "MIT"
keywords = ["async", "zync"]
authors = [{ name = "Benjy Wiener", email = "benjywiener@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = ["typing_extensions~=4.0; python_version<'3.13'"]

[project.urls]
Documentation = "https://github.com/BenjyWiener/zyncio#readme"
Issues = "https://github.com/BenjyWiener/zyncio/issues"
Source = "https://github.com/BenjyWiener/zyncio"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
]
test = [
    "coverage~=7.13",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.0",
]
docs = [
    "enum-tools[sphinx]~=0.13.0",
    "niquests~=3.18",
    "shibuya==2026.1.9",
    "sphinx~=8.2",
    "sphinx-autodoc-typehints~=3.5",
    "sphinx-copybutton~=0.5.2",
    "sphinx-design~=0.7.0",
    "sphinxcontrib-trio~=1.2",
]

[tool.uv.dependency-groups.docs]
requires-python = ">=3.14"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.custom]
path = "metadata_hook.py"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["D", "I"]
ignore = [
    "D105", # undocumented-magic-method
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "error"

[[tool.pyright.executionEnvironments]]
root = "src/zyncio"
pythonVersion = "3.10"

[[tool.pyright.executionEnvironments]]
root = "tests"
pythonVersion = "3.10"

[[tool.pyright.executionEnvironments]]
root = "docs"
pythonVersion = "3.14"

[tool.coverage.run]
source_pkgs = ["zyncio", "tests"]
branch = true

[tool.coverage.paths]
zyncio = ["src/zyncio"]
tests = ["tests"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    '# pragma: no cover',
    'def __repr__',
    '@overload',
    'def .*: \.\.\.',
]
omit = ["tests/typing_tests.py"]
show_missing = true
